<resources>
    <string name="app_name">Photo Buddy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email">info@robellistudios.gr</string>
    <string name="robellistudios">robelli studios</string>
    <string name="subtitle">Enrich your Photos</string>
    <string name="ok_string">ok</string>
    <string name="cancel_string">cancel</string>
    <string name="weather_map_desc">show the current weather</string>
    <string name="geo_map_desc">add a geo location map</string>
    <string name="map_string">Map</string>
    <string name="weather_string">Weather</string>
    <string name="title_activity_maps">Map</string>
    <string name="bearing_string">Bearing</string>
    <string name="wind_string">Wind</string>
    <string name="huminity_string">Humidity</string>
    <string name="condition_string">Condition</string>
    <string name="temperature_string">Temperature</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
