<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myTableLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_string"
            android:id="@+id/checkBox_GeoMap"
            android:paddingRight="20dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        android:text="@string/geo_map_desc"
        android:textAlignment="textStart"
            android:singleLine="true" />

    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_string"
        android:id="@+id/checkBox_Weather"
        android:paddingRight="20dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:text="@string/weather_map_desc"
            android:textAlignment="textStart"
            android:paddingRight="20dp" />

    </TableRow>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_string"
        android:id="@+id/ok_button"
        android:layout_column="1"
        android:nestedScrollingEnabled="false" />

</TableLayout>




