<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="layout.WeatherSettings"
    android:orientation="vertical"
    android:background="#64ffffff"
        android:padding="20dp">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_string"
        android:id="@+id/temperature_checkBox"
        android:textSize="@dimen/abc_text_size_large_material" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/condition_string"
        android:id="@+id/condition_checkbox"
        android:textSize="@dimen/abc_text_size_large_material" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/huminity_string"
        android:id="@+id/huminity_checkbox"
        android:textSize="@dimen/abc_text_size_large_material" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_string"
        android:id="@+id/wind_checkbox"
        android:textSize="@dimen/abc_text_size_large_material" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bearing_string"
        android:id="@+id/bearing_checkbox"
        android:textSize="@dimen/abc_text_size_large_material" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ok"
            android:src="@drawable/ic_ok"
            android:theme="@style/Lightadapted"
            android:layout_marginTop="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="20dp" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:src="@drawable/ic_cancel"
            android:theme="@style/Lightadapted"
            android:layout_alignTop="@+id/ok"
            android:layout_alignParentEnd="true"
            android:paddingRight="20dp" />
    </RelativeLayout>

</LinearLayout>
</RelativeLayout>
